--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -134,12 +134,14 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/win_retry_icon" />
+                    android:layout_gravity="center|top"
+                    android:layout_marginTop="5dp"
+                    app:srcCompat="@drawable/win_retry_button" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="-5dp"
                     android:gravity="bottom|center"
                     android:style="?android:attr/borderlessButtonStyle"
                     android:text="Retry"
@@ -164,13 +166,15 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center|top"
+                    android:layout_marginTop="7dp"
                     app:srcCompat="@drawable/menu_icon" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="bottom"
-                    android:gravity="bottom|center_horizontal"
+                    android:layout_marginBottom="-7dp"
+                    android:gravity="bottom|center"
                     android:style="?android:attr/borderlessButtonStyle"
                     android:text="Menu"
                     android:textColor="@color/primary"
@@ -178,12 +182,35 @@
             </FrameLayout>
 
 
-            <ImageView
+            <FrameLayout
                 android:id="@+id/levels"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:layout_margin="20dp"
-                android:src="@drawable/levels_icon" />
+                android:background="@drawable/level_background_available"
+                android:onClick="handleClickedButton"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toTopOf="@+id/Button5"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/Button4"
+                app:layout_constraintTop_toBottomOf="@+id/Button1">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center|top"
+                    android:layout_marginTop="5dp"
+                    app:srcCompat="@drawable/levels_icon" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="-7dp"
+                    android:gravity="bottom|center"
+                    android:style="?android:attr/borderlessButtonStyle"
+                    android:text="Levels"
+                    android:textColor="@color/primary"
+                    android:textSize="10sp" />
+            </FrameLayout>
         </LinearLayout>
 
     </LinearLayout>
