--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -23,7 +23,7 @@
         android:layout_height="match_parent"
         android:gravity="bottom"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,9 +55,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="-7dp"
+                    android:layout_marginBottom="3dp"
                     android:gravity="bottom|center"
-                    android:style="?android:attr/borderlessButtonStyle"
                     android:text="Menu"
                     android:textColor="@color/primary"
                     android:textSize="10sp" />
@@ -97,9 +96,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="-7dp"
+                    android:layout_marginBottom="3dp"
                     android:gravity="bottom|center"
-                    android:style="?android:attr/borderlessButtonStyle"
                     android:text="Menu"
                     android:textColor="@color/primary"
                     android:textSize="10sp" />
