--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -57,7 +57,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginBottom="3dp"
                     android:gravity="bottom|center"
-                    android:text="Menu"
+                    android:text="@string/menu"
                     android:textColor="@color/primary"
                     android:textSize="10sp" />
             </FrameLayout>
@@ -98,7 +98,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginBottom="3dp"
                     android:gravity="bottom|center"
-                    android:text="Menu"
+                    android:text="@string/levels"
                     android:textColor="@color/primary"
                     android:textSize="10sp" />
             </FrameLayout>
