--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="3dp"
             android:gravity="bottom|center"
-            android:text="Levels"
+            android:text="@string/levels"
             android:textColor="@color/primary"
             android:textSize="10sp" />
     </FrameLayout>
@@ -86,16 +86,16 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|top"
             android:layout_marginTop="7dp"
-            app:srcCompat="@drawable/menu_icon" />
+            app:srcCompat="@drawable/people_1" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="3dp"
             android:gravity="bottom|center"
-            android:text="Menu"
+            android:text="@string/contributors"
             android:textColor="@color/primary"
-            android:textSize="10sp" />
+            android:textSize="8sp" />
     </FrameLayout>
 
 
