--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,25 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.Android" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    </style>
+
+    <style name="LanguageDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowBackground">@color/background</item>
+        <item name="android:background">@color/background</item>
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:textColorAlertDialogListItem">@color/primary</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowAnimationStyle">
+            @android:style/Animation.Dialog
+        </item>
+        <item name="android:windowMinWidthMajor">
+            @android:dimen/dialog_min_width_major
+        </item>
+        <item name="android:windowMinWidthMinor">
+            @android:dimen/dialog_min_width_minor
+        </item>
+
     </style>
 </resources>
