--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,8 +5,31 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:windowBackground">@color/background
         </item>
+        <item name="android:textColor">@color/primary</item>
     </style>
 
 
     <style name="Theme.Android" parent="Base.Theme.Android" />
+
+    <style name="LanguageDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowBackground">@color/background</item>
+        <item name="android:background">@color/background</item>
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:textColorAlertDialogListItem">@color/primary</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowAnimationStyle">
+            @android:style/Animation.Dialog
+        </item>
+        <item name="android:windowMinWidthMajor">
+            @android:dimen/dialog_min_width_major
+        </item>
+        <item name="android:windowMinWidthMinor">
+            @android:dimen/dialog_min_width_minor
+        </item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">match_parent</item>
+
+    </style>
 </resources>
