supporting multiple pages

--- a/app/src/main/res/layout/activity_level_menu.xml
+++ b/app/src/main/res/layout/activity_level_menu.xml
@@ -1,165 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/levelmenu"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/level"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#31363F">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/Button1"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/level_background_available"
-        android:onClick="handleClickedButton"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/levels_container"
+        android:name="aa.android.fragments.LevelsContainerFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-        android:textAlignment="center"
-        android:textColor="@color/primary"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/Button3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Button2"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/Button2"
-
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/level_background_available"
-        android:onClick="handleClickedButton"
-        android:textAlignment="center"
-        android:textColor="@color/primary"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/Button4"
-        app:layout_constraintEnd_toStartOf="@+id/Button1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/Button3"
-
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/level_background_available"
-        android:onClick="handleClickedButton"
-        android:textAlignment="center"
-        android:textColor="@color/primary"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/Button5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Button4"
-        app:layout_constraintTop_toBottomOf="@+id/Button1" />
-
-    <TextView
-        android:id="@+id/Button4"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/level_background_available"
-        android:onClick="handleClickedButton"
-        android:textAlignment="center"
-        android:textColor="@color/primary"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/Button6"
-        app:layout_constraintEnd_toStartOf="@+id/Button3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Button2" />
-
-    <TextView
-        android:id="@+id/Button5"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/level_background_available"
-        android:onClick="handleClickedButton"
-        android:textAlignment="center"
-        android:textColor="@color/primary"
-
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/Button7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Button6"
-        app:layout_constraintTop_toBottomOf="@+id/Button3" />
-
-    <TextView
-        android:id="@+id/Button6"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/level_background_available"
-        android:onClick="handleClickedButton"
-        android:textAlignment="center"
-        android:textColor="@color/primary"
-
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/Button8"
-        app:layout_constraintEnd_toStartOf="@+id/Button5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Button4" />
-
-    <TextView
-
-        android:id="@+id/Button7"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/level_background_available"
-        android:onClick="handleClickedButton"
-        android:textAlignment="center"
-        android:textColor="@color/primary"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/Button9"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Button8"
-        app:layout_constraintTop_toBottomOf="@+id/Button5" />
-
-    <TextView
-        android:id="@+id/Button8"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/level_background_available"
-        android:onClick="handleClickedButton"
-        android:textAlignment="center"
-        android:textColor="@color/primary"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/Button10"
-        app:layout_constraintEnd_toStartOf="@+id/Button7"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Button6" />
-
-    <TextView
-        android:id="@+id/Button9"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/level_background_available"
-        android:onClick="handleClickedButton"
-        android:textAlignment="center"
-        android:textColor="@color/primary"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Button10"
-        app:layout_constraintTop_toBottomOf="@+id/Button7" />
-
-    <TextView
-        android:id="@+id/Button10"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/level_background_available"
-        android:onClick="handleClickedButton"
-        android:textAlignment="center"
-        android:textColor="@color/primary"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Button9"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Button8" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
