--- a/app/src/main/res/layout/fragment_contributor.xml
+++ b/app/src/main/res/layout/fragment_contributor.xml
@@ -10,11 +10,13 @@
         android:id="@+id/nameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="-30dp"
         android:textColor="@color/primary"
         android:textSize="28sp"
         app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
